--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Run tests
-        run: uv run python -m pytest tests --cov --cov-config=pyproject.toml --cov-report=xml
+        run: uvx nox -s test-${{ matrix.python-version }}
 
       - name: Check typing
-        run: uv run ty check
+        run: uvx nox -s type_check
+        if: ${{ matrix.python-version == '3.11' }}
 
 
       - name: Upload coverage reports to Codecov with GitHub Action on Python 3.11
