--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ hugo-template-dependencies = "hugo_template_dependencies.cli:app"
 dev = [
     "pytest>=9.0.2",
     "pre-commit>=4.5.1",
-    "tox-uv>=1.29.0",
+    "nox>=2024.4.15",
     "deptry>=0.24.0",
     "ty>=0.0.8",
     "pytest-cov>=7.0.0",
